# web_modul_14

./: README.md  docker-compose.yml  main.py  pyproject.toml
docs/source/: conf.py
migrations/versions/: 9cedc3dceae4_init.py
src/: schemas.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  avatar.py  contacts.py
src/services/: auth.py  email.py
tests/: conftest.py  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
